prediction using conventional ML methods

--- a/2_conventional-machine-learning.ipynb
+++ b/2_conventional-machine-learning.ipynb
@@ -4,39 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that necessary data is retrieved and saved, we can import the pickle file straight away and do deep learning on the compounds."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Import packages"
+    "Now that necessary data is retrieved and saved, we can import the pickle file straight away. In this notebook, we will only try conventional machine learning methods with basic chemical features for comparison later.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/AikRui/anaconda3/lib/python3.6/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
-    "import deepchem as dc\n",
-    "import rdkit\n",
     "\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.ensemble import GradientBoostingClassifier\n",
-    "from sklearn."
+    "from sklearn import svm\n",
+    "from sklearn.neighbors import KNeighborsClassifier"
    ]
   },
   {
@@ -55,7 +39,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(27785, 2)\n"
+      "(28263, 19)\n"
      ]
     },
     {
@@ -81,21 +65,64 @@
        "      <th></th>\n",
        "      <th>smiles</th>\n",
        "      <th>category</th>\n",
+       "      <th>mw_freebase</th>\n",
+       "      <th>alogp</th>\n",
+       "      <th>hba</th>\n",
+       "      <th>hbd</th>\n",
+       "      <th>psa</th>\n",
+       "      <th>rtb</th>\n",
+       "      <th>acd_logp</th>\n",
+       "      <th>acd_logd</th>\n",
+       "      <th>full_mwt</th>\n",
+       "      <th>aromatic_rings</th>\n",
+       "      <th>heavy_atoms</th>\n",
+       "      <th>qed_weighted</th>\n",
+       "      <th>mw_monoisotopic</th>\n",
+       "      <th>hba_lipinski</th>\n",
+       "      <th>hbd_lipinski</th>\n",
+       "      <th>mol</th>\n",
+       "      <th>agrochemical</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>COC(=O)C1=C(C)N(Cc2ccccc2)C(=NC1c3ccc(Br)cc3)N...</td>\n",
+       "      <td>Cl.O=C(NCc1ccncc1)[C@@H]2CCCN2C(=O)[C@@H]3CCCN3</td>\n",
        "      <td>toxin</td>\n",
+       "      <td>302.38</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>74.33</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1.04</td>\n",
+       "      <td>-0.77</td>\n",
+       "      <td>338.84</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>302.174</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x117e3f538&gt;</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                              smiles category\n",
-       "0  COC(=O)C1=C(C)N(Cc2ccccc2)C(=NC1c3ccc(Br)cc3)N...    toxin"
+       "                                            smiles category mw_freebase alogp  \\\n",
+       "0  Cl.O=C(NCc1ccncc1)[C@@H]2CCCN2C(=O)[C@@H]3CCCN3    toxin      302.38  0.44   \n",
+       "\n",
+       "  hba hbd    psa rtb acd_logp acd_logd full_mwt aromatic_rings heavy_atoms  \\\n",
+       "0   4   2  74.33   4     1.04    -0.77   338.84              1          22   \n",
+       "\n",
+       "  qed_weighted mw_monoisotopic hba_lipinski hbd_lipinski  \\\n",
+       "0         0.85         302.174            6            2   \n",
+       "\n",
+       "                                             mol  agrochemical  \n",
+       "0  <rdkit.Chem.rdchem.Mol object at 0x117e3f538>             0  "
       ]
      },
      "execution_count": 2,
@@ -113,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Convert Smiles string to rdkit Molecular class"
+    "Drop columns that are not required for learning using Gradient Boosting Classifier"
    ]
   },
   {
@@ -122,14 +149,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['mol'] = data['smiles'].apply(rdkit.Chem.MolFromSmiles)"
+    "data = data.drop(['smiles', 'mol', 'category'], axis=1)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove null values"
+    "Assign features (X) and class (Y)"
    ]
   },
   {
@@ -138,117 +165,259 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.dropna(axis=0, inplace=True)"
+    "X = data.drop(['agrochemical'], axis=1)\n",
+    "Y = data['agrochemical']"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Count number of compounds in each category"
+    "Ensure that all columns of X are converted into readable floats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = X.astype('float')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Split dataset into training set and testing set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=88)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Set up conventional machine learning models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) Gradient Boosting Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gbc = GradientBoostingClassifier(n_estimators=500, learning_rate=1.0, \n",
+    "                                max_depth=3, random_state=0).fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "toxin           14544\n",
-       "insecticidal     4653\n",
-       "fungicidal       3640\n",
-       "herbicidal       3284\n",
-       "nematicidal       321\n",
-       "Name: category, dtype: int64"
+       "0.8048823633468954"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data['category'].value_counts()"
+    "gbc.score(x_test, y_test)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Shuffle data"
+    "2) Support Vector Machines"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.random.shuffle(data.values)"
+    "clf = svm.SVC(gamma=0.01)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use deepchem package to featurize data. We are trying Convolutional Molecule Graphs now"
+    "Use exhausted search (GridSearchCV) to find the best gamma to use for RBF kernel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ft = dc.feat.ConvMolFeaturizer()"
+    "parameters = {'gamma':[1, 0.1, 0.01, 0.001]}\n",
+    "gridsearch = GridSearchCV(clf, parameters, cv=5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['conv_mol'] = ft.featurize(data['mol'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Split dataset into training, validation and testing datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "splitter = dc.splits.splitters.RandomSplitter()\n",
-    "train, valid, test = splitter.split(data, frac_train=0.7, frac_valid=0.2, frac_test=0.1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(18509, 5288, 2645)"
+       "GridSearchCV(cv=5, error_score='raise',\n",
+       "       estimator=SVC(C=1.0, cache_size=200, class_weight=None, coef0=0.0,\n",
+       "  decision_function_shape='ovr', degree=3, gamma=0.01, kernel='rbf',\n",
+       "  max_iter=-1, probability=False, random_state=None, shrinking=True,\n",
+       "  tol=0.001, verbose=False),\n",
+       "       fit_params=None, iid=True, n_jobs=1,\n",
+       "       param_grid={'gamma': [1, 0.1, 0.01, 0.001]},\n",
+       "       pre_dispatch='2*n_jobs', refit=True, return_train_score='warn',\n",
+       "       scoring=None, verbose=0)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(train), len(valid), len(test)"
+    "gridsearch.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gamma': 0.1} 0.7131800088456435\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (gridsearch.best_params_, gridsearch.best_score_)\n",
+    "clf = gridsearch.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7304086325844684"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf.score(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3) Nearest Neighbor Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nn = KNeighborsClassifier(n_neighbors=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parameters = {'n_neighbors': [1, 3, 5, 7],\n",
+    "              'weights': ['uniform', 'distance'],\n",
+    "              'algorithm': ['ball_tree', 'kd_tree', 'brute']\n",
+    "                }\n",
+    "gridsearch = GridSearchCV(nn, parameters, cv=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "gridsearch = gridsearch.fit(x_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'algorithm': 'brute', 'n_neighbors': 3, 'weights': 'distance'} 0.6969924812030075\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (gridsearch.best_params_, gridsearch.best_score_)\n",
+    "nn = gridsearch.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7132496019812489"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nn.score(x_test, y_test)"
    ]
   },
   {
