Trial 1: use regular fingerprint descriptor with neural network

--- a/3_fingerprint_model.ipynb
+++ b/3_fingerprint_model.ipynb
@@ -121,7 +121,7 @@
        "      <td>302.174</td>\n",
        "      <td>6</td>\n",
        "      <td>2</td>\n",
-       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x124f75fb8&gt;</td>\n",
+       "      <td>&lt;rdkit.Chem.rdchem.Mol object at 0x12bc10fb8&gt;</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -139,7 +139,7 @@
        "0         0.85         302.174            6            2   \n",
        "\n",
        "                                             mol  agrochemical  \n",
-       "0  <rdkit.Chem.rdchem.Mol object at 0x124f75fb8>             0  "
+       "0  <rdkit.Chem.rdchem.Mol object at 0x12bc10fb8>             0  "
       ]
      },
      "execution_count": 2,
@@ -250,12 +250,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Standard scaling"
+    "Convert Y into numpy array"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(28263,)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Y = np.ndarray.flatten(np.array(Y))\n",
+    "Y.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Standard scaling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,11 +300,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size=0.2, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define metrics for classification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def classification_metrics(y_true, y_pred):\n",
+    "    if (y_true.shape != y_pred.shape):\n",
+    "        print (\"Shapes of two arrays do not match.\")\n",
+    "        return \n",
+    "    tp, fp, tn, fn = 0, 0, 0, 0\n",
+    "    total = y_true.shape[0]\n",
+    "    for true, pred in zip(y_true, y_pred):\n",
+    "        if true == 1 and pred == 1:\n",
+    "            tp += 1\n",
+    "        elif true == 0 and pred == 0:\n",
+    "            tn += 1\n",
+    "        elif true == 1 and pred == 0:\n",
+    "            fn += 1\n",
+    "        else:\n",
+    "            fp += 1\n",
+    "    print (\"True positive:\", float(tp)/total)\n",
+    "    print (\"True negative:\", float(tn)/total)\n",
+    "    print (\"False positive:\", float(fp)/total)\n",
+    "    print (\"False negative:\", float(fn)/total)\n",
+    "    print ()\n",
+    "    print (\"Accuracy: \", float(tn + tp)/total)"
    ]
   },
   {
@@ -290,14 +354,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_simple_model():\n",
     "    model = Sequential()\n",
-    "    model.add(Dense(64, input_dim=2048, activation='softmax', kernel_regularizer=regularizers.l2(0.)))\n",
-    "    model.add(Dense(1, input_dim=64, activation='linear'))\n",
+    "    model.add(Dense(128, input_dim=2048, activation='relu', kernel_regularizer=regularizers.l2(0.)))\n",
+    "    model.add(Dense(8, input_dim=128, activation='softmax'))\n",
+    "    model.add(Dense(1, input_dim=8, activation='sigmoid'))\n",
     "    \n",
     "    # Compile model\n",
     "    model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
@@ -309,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -325,55 +390,55 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/25\n",
-      "22610/22610 [==============================] - 3s 141us/step - loss: 1.0592 - acc: 0.6460\n",
+      "22610/22610 [==============================] - 6s 253us/step - loss: 0.4969 - acc: 0.8115\n",
       "Epoch 2/25\n",
-      "22610/22610 [==============================] - 3s 128us/step - loss: 0.3722 - acc: 0.8393\n",
+      "22610/22610 [==============================] - 6s 248us/step - loss: 0.3774 - acc: 0.8715\n",
       "Epoch 3/25\n",
-      "22610/22610 [==============================] - 3s 129us/step - loss: 0.2922 - acc: 0.8871\n",
+      "22610/22610 [==============================] - 5s 219us/step - loss: 0.3251 - acc: 0.8868\n",
       "Epoch 4/25\n",
-      "22610/22610 [==============================] - 3s 129us/step - loss: 0.2313 - acc: 0.9117\n",
+      "22610/22610 [==============================] - 5s 223us/step - loss: 0.2920 - acc: 0.8903\n",
       "Epoch 5/25\n",
-      "22610/22610 [==============================] - 3s 131us/step - loss: 0.2078 - acc: 0.9207\n",
+      "22610/22610 [==============================] - 5s 236us/step - loss: 0.2737 - acc: 0.9035\n",
       "Epoch 6/25\n",
-      "22610/22610 [==============================] - 3s 131us/step - loss: 0.1859 - acc: 0.9318\n",
+      "22610/22610 [==============================] - 6s 254us/step - loss: 0.2567 - acc: 0.9057\n",
       "Epoch 7/25\n",
-      "22610/22610 [==============================] - 3s 131us/step - loss: 0.1731 - acc: 0.9361\n",
+      "22610/22610 [==============================] - 6s 253us/step - loss: 0.2337 - acc: 0.9108\n",
       "Epoch 8/25\n",
-      "22610/22610 [==============================] - 3s 134us/step - loss: 0.1546 - acc: 0.9486\n",
+      "22610/22610 [==============================] - 5s 230us/step - loss: 0.2232 - acc: 0.9161\n",
       "Epoch 9/25\n",
-      "22610/22610 [==============================] - 3s 135us/step - loss: 0.1918 - acc: 0.9459\n",
+      "22610/22610 [==============================] - 5s 239us/step - loss: 0.2311 - acc: 0.9144\n",
       "Epoch 10/25\n",
-      "22610/22610 [==============================] - 3s 134us/step - loss: 0.1766 - acc: 0.9488\n",
+      "22610/22610 [==============================] - 6s 255us/step - loss: 0.2080 - acc: 0.9238\n",
       "Epoch 11/25\n",
-      "22610/22610 [==============================] - 3s 132us/step - loss: 0.1805 - acc: 0.9476\n",
+      "22610/22610 [==============================] - 5s 237us/step - loss: 0.1974 - acc: 0.9244\n",
       "Epoch 12/25\n",
-      "22610/22610 [==============================] - 3s 133us/step - loss: 0.1692 - acc: 0.9515\n",
+      "22610/22610 [==============================] - 5s 242us/step - loss: 0.1952 - acc: 0.9261\n",
       "Epoch 13/25\n",
-      "22610/22610 [==============================] - 3s 131us/step - loss: 0.1619 - acc: 0.9564\n",
+      "22610/22610 [==============================] - 5s 223us/step - loss: 0.1884 - acc: 0.9290\n",
       "Epoch 14/25\n",
-      "22610/22610 [==============================] - 3s 132us/step - loss: 0.1701 - acc: 0.9558\n",
+      "22610/22610 [==============================] - 6s 276us/step - loss: 0.1953 - acc: 0.9261\n",
       "Epoch 15/25\n",
-      "22610/22610 [==============================] - 3s 132us/step - loss: 0.1757 - acc: 0.9575\n",
+      "22610/22610 [==============================] - 6s 258us/step - loss: 0.1936 - acc: 0.9278\n",
       "Epoch 16/25\n",
-      "22610/22610 [==============================] - 3s 132us/step - loss: 0.1969 - acc: 0.9532\n",
+      "22610/22610 [==============================] - 5s 233us/step - loss: 0.1857 - acc: 0.9316\n",
       "Epoch 17/25\n",
-      "22610/22610 [==============================] - 3s 133us/step - loss: 0.1808 - acc: 0.9545\n",
+      "22610/22610 [==============================] - 5s 235us/step - loss: 0.1837 - acc: 0.9323\n",
       "Epoch 18/25\n",
-      "22610/22610 [==============================] - 3s 143us/step - loss: 0.1648 - acc: 0.9582\n",
+      "22610/22610 [==============================] - 5s 223us/step - loss: 0.1834 - acc: 0.9336\n",
       "Epoch 19/25\n",
-      "22610/22610 [==============================] - 3s 136us/step - loss: 0.1546 - acc: 0.9584\n",
+      "22610/22610 [==============================] - 5s 225us/step - loss: 0.1765 - acc: 0.9395\n",
       "Epoch 20/25\n",
-      "22610/22610 [==============================] - 3s 135us/step - loss: 0.1534 - acc: 0.9612\n",
+      "22610/22610 [==============================] - 5s 228us/step - loss: 0.1719 - acc: 0.9374\n",
       "Epoch 21/25\n",
-      "22610/22610 [==============================] - 3s 149us/step - loss: 0.1657 - acc: 0.9602\n",
+      "22610/22610 [==============================] - 5s 229us/step - loss: 0.1549 - acc: 0.9449\n",
       "Epoch 22/25\n",
-      "22610/22610 [==============================] - 3s 132us/step - loss: 0.1785 - acc: 0.9596\n",
+      "22610/22610 [==============================] - 5s 231us/step - loss: 0.1563 - acc: 0.9447\n",
       "Epoch 23/25\n",
-      "22610/22610 [==============================] - 3s 140us/step - loss: 0.1726 - acc: 0.9607\n",
+      "22610/22610 [==============================] - 5s 228us/step - loss: 0.1507 - acc: 0.9472\n",
       "Epoch 24/25\n",
-      "22610/22610 [==============================] - 3s 137us/step - loss: 0.1879 - acc: 0.9614\n",
+      "22610/22610 [==============================] - 5s 231us/step - loss: 0.1687 - acc: 0.9407\n",
       "Epoch 25/25\n",
-      "22610/22610 [==============================] - 3s 140us/step - loss: 0.1693 - acc: 0.9631\n"
+      "22610/22610 [==============================] - 5s 240us/step - loss: 0.1528 - acc: 0.9450\n"
      ]
     }
    ],
@@ -383,24 +448,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(x_test)\n",
+    "y_pred = np.around(np.ndarray.flatten(y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5653/5653 [==============================] - 0s 54us/step\n",
-      "Test score: 0.4848937130113545\n",
-      "Test accuracy: 0.9060675747917961\n"
+      "True positive: 0.45568724571024233\n",
+      "True negative: 0.44595789846099415\n",
+      "False positive: 0.07182027242172298\n",
+      "False negative: 0.02653458340704051\n",
+      "\n",
+      "Accuracy:  0.9016451441712365\n"
      ]
     }
    ],
    "source": [
-    "score, acc = model.evaluate(x_test, y_test, batch_size=32)\n",
-    "\n",
-    "print (\"Test score:\", score)\n",
-    "print (\"Test accuracy:\", acc)"
+    "classification_metrics(y_test, y_pred)"
    ]
   },
   {
@@ -412,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -435,7 +510,7 @@
        "            oob_score=False, random_state=0, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,22 +521,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = rfc.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.654342826817619"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True positive: 0.25809304793914734\n",
+      "True negative: 0.3962497788784716\n",
+      "False positive: 0.12152839200424553\n",
+      "False negative: 0.2241287811781355\n",
+      "\n",
+      "Accuracy:  0.654342826817619\n"
+     ]
     }
    ],
    "source": [
-    "rfc.score(x_test, y_test)"
+    "classification_metrics(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3) Convolutional Neural Network"
    ]
   },
   {
