--- a/01_extract-data-for-binary-classification.ipynb
+++ b/01_extract-data-for-binary-classification.ipynb
@@ -378,42 +378,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Featurize molecular fingerprint"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fingerprint(mol):\n",
-    "    return np.ndarray.flatten(np.array(FingerprintMols.FingerprintMol(mol)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data['fingerprint'] = data['mol'].apply(fingerprint)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "store = pd.HDFStore('data/dataset2.h5')\n",
-    "store.put('dataset2', data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Count number of compounds in agrochemical and non-agrochemical category"
    ]
   },
@@ -2175,7 +2139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_pickle(\"./dataset2.pkl\")"
+    "data.to_pickle(\"./binary_classification/data/dataset2.pkl\")"
    ]
   },
   {
@@ -3939,21 +3903,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "store = pd.HDFStore('data/dataset1.h5')\n",
-    "store.put('dataset1', dataset1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset1.to_pickle(\"./dataset1.pkl\")"
+    "dataset1.to_pickle(\"./binary_classification/data/dataset1.pkl\")"
    ]
   },
   {
