Changes to be committed: 	modified:   01_extract-data-for-binary-classification.ipynb 	modified:   02_extract-data-for-multiclass-classification.ipynb 	deleted:    11_featurize-and-save.py 	modified:   binary_classification/11_featurize-and-save.py 	modified:   binary_classification/12_compound-properties.py 	modified:   binary_classification/13_daylight-fingerprint.py 	modified:   binary_classification/14_ecfp.py 	modified:   binary_classification/functions/__pycache__/featurizing_functions.cpython-36.pyc 	copied:     multiclass_classification/functions/__pycache__/general_functions.cpython-36.pyc -> binary_classification/functions/__pycache__/general_functions.cpython-36.pyc 	modified:   binary_classification/functions/__pycache__/model_functions.cpython-36.pyc 	modified:   binary_classification/functions/featurizing_functions.py 	modified:   multiclass_classification/11_featurize-and-save.py 	renamed:    12_compound-properties.py -> multiclass_classification/12_compound-properties.py 	renamed:    13_daylight-fingerprint.py -> multiclass_classification/13_daylight-fingerprint.py 	renamed:    14_ecfp.py -> multiclass_classification/14_ecfp.py 	modified:   multiclass_classification/functions/__pycache__/featurizing_functions.cpython-36.pyc 	modified:   multiclass_classification/functions/__pycache__/general_functions.cpython-36.pyc 	modified:   multiclass_classification/functions/__pycache__/model_functions.cpython-36.pyc 	modified:   multiclass_classification/functions/featurizing_functions.py 	modified:   multiclass_classification/functions/general_functions.py 	modified:   multiclass_classification/functions/model_functions.py 	deleted:    multiclass_classification/gpu_job_submit_example.sge

--- a/01_extract-data-for-binary-classification.ipynb
+++ b/01_extract-data-for-binary-classification.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -102,15 +102,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.97 s, sys: 147 ms, total: 7.12 s\n",
-      "Wall time: 7.45 s\n"
+      "CPU times: user 6.46 s, sys: 95.6 ms, total: 6.56 s\n",
+      "Wall time: 6.65 s\n"
      ]
     }
    ],
@@ -121,6 +121,28 @@
     "        if (i < j):\n",
     "            intersection = list(set(molregno[cat_a])&set(molregno[cat_b]))\n",
     "            molregno[cat_a] = [x for x in molregno[cat_a] if x not in intersection]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "toxin : 537601\n",
+      "fungicidal : 4107\n",
+      "nematicidal : 433\n",
+      "herbicidal : 3568\n",
+      "insecticidal : 5987\n"
+     ]
+    }
+   ],
+   "source": [
+    "for cat in categories:\n",
+    "    print (\"%s\" %cat[1:-1], \":\", len(molregno[cat]))"
    ]
   },
   {
