Changes to be committed: 	modified:   0_extract-data.ipynb 	renamed:    1_train-test-random-split.ipynb -> 11_train-test-random-split.ipynb 	renamed:    1_train-test-scaffold-split.ipynb -> 12_train-test-scaffold-split.ipynb 	renamed:    run_gb.py -> 21_run-gb.py 	renamed:    run_rf.py -> 22_run-rf.py 	renamed:    run_knn.py -> 23_run-knn.py 	renamed:    run_nn.py -> 24_run-nn.py 	renamed:    2_pick-model-and-train.py -> 3_pick-model-and-train.py 	renamed:    3_load-model-and-test.py -> 4_load-model-and-test.py 	new file:   data/assay_identifier.txt 	new file:   data/chembl_25_schema.png 	new file:   data/chembl_25_schema_documentation.txt 	new file:   data/document_identifier.txt 	deleted:    figures/PCA_ecfp_random_splitting.png 	deleted:    figures/PCA_ecfp_scaffold_splitting.png 	deleted:    figures/PCA_rdk_random_splitting.png 	deleted:    figures/PCA_rdk_scaffold_splitting.png 	deleted:    plot_figures.ipynb 	new file:   plot_figures/figures/PCA_ecfp_random_splitting.png 	new file:   plot_figures/figures/PCA_ecfp_scaffold_splitting.png 	new file:   plot_figures/figures/PCA_rdk_random_splitting.png 	new file:   plot_figures/figures/PCA_rdk_scaffold_splitting.png 	new file:   plot_figures/figures/gb_lr_MicroAUC.png 	new file:   plot_figures/figures/knn_numneighbors_Accuracy.png 	new file:   plot_figures/figures/nn_ecfp_l1_50epochs.png 	new file:   plot_figures/figures/nn_ecfp_none_50epochs.png 	new file:   plot_figures/figures/nn_rdk_l1_50epochs.png 	new file:   plot_figures/figures/nn_rdk_none_50epochs.png 	new file:   plot_figures/figures/nn_regularizers_MicroAUC.png 	new file:   plot_figures/figures/rf_depth_MicroAUC.png 	renamed:    figures/total_accuracy.png -> plot_figures/figures/total_accuracy.png 	new file:   plot_figures/plot_figures.ipynb 	new file:   plot_figures/results/gb_output.txt 	new file:   plot_figures/results/knn_output.txt 	new file:   plot_figures/results/nn_output.txt 	new file:   plot_figures/results/nn_traintest_output.txt 	new file:   

--- a/based_on_activity/0_extract-data.ipynb
+++ b/based_on_activity/0_extract-data.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = sqlite3.connect('../chembl_24.db')\n",
+    "db = sqlite3.connect('./data/chembl_24.db')\n",
     "c = db.cursor()"
    ]
   },
@@ -41,7 +41,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chembl_assay_id = pd.read_csv(\"../assay_identifier.txt\", delimiter='\\t', skiprows=2, usecols=[2])\n",
+    "chembl_assay_id = pd.read_csv(\"./data/assay_identifier.txt\", delimiter='\\t', skiprows=2, usecols=[2])\n",
     "chembl_assay_id = list(chembl_assay_id['ChEMBL assay identifier'])\n",
     "\n",
     "assay_id = c.execute(\"SELECT assay_id, bao_format, chembl_id FROM assays WHERE chembl_id IN \" + str(tuple(chembl_assay_id))).fetchall()\n",
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "document_identifiers = pd.read_csv(\"../document_identifier.txt\", delimiter='\\t', skiprows=2, usecols=[6])\n",
+    "document_identifiers = pd.read_csv(\"./data/document_identifier.txt\", delimiter='\\t', skiprows=2, usecols=[6])\n",
     "document_identifiers = list(document_identifiers['ChEMBL document identifier'])\n",
     "\n",
     "unique_doc_id = c.execute(\"SELECT doc_id FROM docs WHERE chembl_id IN \" + str(tuple(document_identifiers))).fetchall()\n",
